Integrate change 322288 from ZDESKTOP-712        bug: 61820
       Set word-wrap and max-width so stack never spills over table.
       max-width is 543px because table is 575px and div has padding 10px,
       border 6px on each side: 575-(10+6)*2=543

http://bugzilla.zimbra.com/show_bug.cgi?id=61820

--- a/ZimbraOffline/WebRoot/skins/_base/base2/desktop.css
+++ b/ZimbraOffline/WebRoot/skins/_base/base2/desktop.css
@@ -343,6 +343,8 @@ INPUT[disabled='disabled'] {
 .ZError {
 	background-color: #ffefef;
 	border: 1px solid #ffd5d4;
+	word-wrap: break-word;
+	max-width: 543px
 }
 
 .ZWarning {
